--- a/AI/utils/notebooks/lstm.ipynb
+++ b/AI/utils/notebooks/lstm.ipynb
@@ -674,6 +674,66 @@
     "# Yeni CSV dosyasını kaydet\n",
     "df.to_csv(\"yeni_english_description.csv\", index=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1ab2475d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      RecordDate  CurrencyRate\n",
+      "0     01.01.2021           NaN\n",
+      "1     02.01.2021           NaN\n",
+      "2     03.01.2021           NaN\n",
+      "3     04.01.2021        7.4194\n",
+      "4     05.01.2021        7.3602\n",
+      "...          ...           ...\n",
+      "1638         NaN       39.5502\n",
+      "1639         NaN       39.5502\n",
+      "1640         NaN       39.5502\n",
+      "1641         NaN       39.5502\n",
+      "1642         NaN       39.5502\n",
+      "\n",
+      "[1643 rows x 2 columns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\EXCALIBUR\\AppData\\Local\\Temp\\ipykernel_14380\\3052736928.py:13: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  df['CurrencyRate'] = df['CurrencyRate'].fillna(method='ffill')\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Excel dosyasını oku (örnek dosya yolu: \"kur_verisi.xlsx\")\n",
+    "df = pd.read_csv(r\"C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\notebooks\\currencyRates.csv\")  # openpyxl yüklü olmalı\n",
+    "\n",
+    "# Tarih formatını düzgün şekilde dönüştür\n",
+    "df['RecordDate'] = pd.to_datetime(df['RecordDate'], dayfirst=True, errors='coerce')\n",
+    "\n",
+    "# Tarihe göre sırala (bazı hücreler NaT olabilir, onları sona atar)\n",
+    "df = df.sort_values('RecordDate').reset_index(drop=True)\n",
+    "\n",
+    "# Eksik kurları bir önceki değerle doldur (hafta sonlarını da dahil)\n",
+    "df['CurrencyRate'] = df['CurrencyRate'].fillna(method='ffill')\n",
+    "\n",
+    "# GG.AA.YYYY formatına çevir\n",
+    "df['RecordDate'] = df['RecordDate'].dt.strftime('%d.%m.%Y')\n",
+    "\n",
+    "# Sonuçları yazdır veya kaydet\n",
+    "print(df)\n",
+    "\n",
+    "# Excel'e kaydetmek istersen\n",
+    "df.to_csv(\"duzenlenmis_kur.csv\", index=False)\n"
+   ]
   }
  ],
  "metadata": {
