--- a/AI/utils/notebooks/rf.ipynb
+++ b/AI/utils/notebooks/rf.ipynb
@@ -376,6 +376,57 @@
     "\n",
     "df.to_csv(\"updated_phones.csv\", index=False, encoding=\"utf-8-sig\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e5496069",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\EXCALIBUR\\AppData\\Local\\Temp\\ipykernel_3600\\934758621.py:4: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df_products = pd.read_csv(r\"C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\notebooks\\LSTMPriceHistory.csv\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   ProductID                   ProductName  RecordDate  Price  CurrencyRate\n",
+      "0     966543  Xiaomi 15 Ultra Cep Telefonu  02.03.2025  79999       36.3652\n",
+      "1     966543  Xiaomi 15 Ultra Cep Telefonu  03.03.2025  79999       36.3812\n",
+      "2     966543  Xiaomi 15 Ultra Cep Telefonu  04.03.2025  79999       36.4097\n",
+      "3     966543  Xiaomi 15 Ultra Cep Telefonu  05.03.2025  79999       36.4011\n",
+      "4     966543  Xiaomi 15 Ultra Cep Telefonu  06.03.2025  79999       36.3682\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# CSV dosyalarını oku\n",
+    "df_products = pd.read_csv(r\"C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\notebooks\\LSTMPriceHistory.csv\")\n",
+    "df_currency = pd.read_csv(r\"C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\notebooks\\currencyRates.csv\")\n",
+    "\n",
+    "# Tarih formatlarını güvenli şekilde dönüştür\n",
+    "df_products[\"RecordDate\"] = pd.to_datetime(df_products[\"RecordDate\"], dayfirst=True, errors=\"coerce\")\n",
+    "df_currency[\"RecordDate\"] = pd.to_datetime(df_currency[\"RecordDate\"], dayfirst=True, errors=\"coerce\")\n",
+    "\n",
+    "# Geçerli tarihleri al, eşleştir\n",
+    "merged_df = pd.merge(df_products, df_currency, on=\"RecordDate\", how=\"left\")\n",
+    "\n",
+    "# Tarihi tekrar GG.AA.YYYY olarak göster (isteğe bağlı)\n",
+    "merged_df[\"RecordDate\"] = merged_df[\"RecordDate\"].dt.strftime(\"%d.%m.%Y\")\n",
+    "\n",
+    "# Sonucu yazdır\n",
+    "print(merged_df.head())\n",
+    "\n",
+    "# Yeni CSV olarak kaydetmek istersen:\n",
+    "merged_df.to_csv(\"products_with_currency.csv\", index=False)\n"
+   ]
   }
  ],
  "metadata": {
